--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 footer {
-  padding: 2rem;
-  background-color: var(--overlay-background-color);
+  background-color: var(--dark-background-color);
+  color: var(--text-color-invert);
   font-size: var(--body-font-size-s);
 }
 
@@ -11,4 +11,26 @@ footer .footer {
 
 footer .footer p {
   margin: 0;
+}
+
+footer .footer-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+}
+
+footer #back-to-top {
+  background-color: var(--dark-background-color);
+}
+
+/* desktop nav styles */
+@media (min-width: 1000px) {
+  footer .footer-inner {
+    flex-direction: row;
+  }
+
+
 }
