--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,10 @@
   --link-hover-color: #136ff6;
   --background-color: #fff;
   --overlay-background-color: #eee;
-  --highlight-background-color: #ccc;
+  --highlight-background-color: rgb(236, 16, 0);
+  --dark-background-color: rgb(10,17,37);
   --text-color: #000;
+  --text-color-invert: #fff;
 
   /* fonts */
   --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
@@ -38,7 +40,7 @@
   --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 41px;
 
 }
 
