another round of lint fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,8 @@
   --link-hover-color: #136ff6;
   --background-color: #fff;
   --overlay-background-color: #eee;
-  --highlight-background-color: rgb(236, 16, 0);
-  --dark-background-color: rgb(10,17,37);
+  --highlight-background-color: rgb(236 16 0);
+  --dark-background-color: rgb(10 17 37);
   --text-color: #000;
   --text-color-invert: #fff;
 
