added support for section background images, and some overall styling for the homepage

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -22,4 +22,8 @@
     .columns > div > div:first-of-type {
         margin-left: unset;
     }
+
+    .columns.unbalanced-left > div > div:first-of-type {
+        flex: 2;
+    }
 }
