--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,3 +237,32 @@ main .section[data-section-status='initialized'] {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+.rockstar-info .columns {
+  margin-top: 10rem;
+}
+
+.hot-topics {
+  background-color: #f6f9fe;
+}
+.hot-topics ul {
+  display: grid;
+  column-gap: 24px;
+  row-gap: 24px;
+  grid-template-columns: repeat(3,minmax(0,1fr));
+  align-items: center;
+}
+
+.hot-topics li {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  height: 76px;
+  background-color: #fff;
+  text-align: center;
+  border: 0 solid var(--text-color);
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 0px 50px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
