--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,31 +1,42 @@
+main .section.cards-container {
+  background-color: #F1F3F4;
+  padding-top: 80px;
+  overflow: auto;
+}
+
+.cards-wrapper{
+  width: 500px;
+  float: left;
+  
+}
 .cards > ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 16px;
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-gap: 16px;
 }
 
 .cards > ul > li {
-    border: 1px solid var(--highlight-background-color);
-    background-color: var(--background-color)
+  border: 1px solid var(--highlight-background-color);
+  background-color: var(--background-color)
 }
 
 .cards .cards-card-body {
-    margin: 16px;
+  margin: 16px;
 }
 
 .cards .cards-card-image {
-    line-height: 0;
+  line-height: 0;
 }
 
 .cards .cards-card-body > *:first-child {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .cards > ul > li img {
-    width: 100%;
-    aspect-ratio: 4 / 3;
-    object-fit: cover;
+  width: 100%;
+  aspect-ratio: 4 / 3;
+  object-fit: cover;
 }
