--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -50,7 +50,7 @@ main .section.cards-container {
   border-radius: 30px;
 }
 
-h1{  
+.cards h1{  
     font-weight: bold;
     color: #080808;
     font-size: 1rem;
