--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,30 +1,47 @@
 main .section.cards-container {
-  background-color: #F1F3F4;
   padding-top: 80px;
-  overflow: auto;
-  border-color: #e5e7eb;
-}
-
-.cards-wrapper{
-  width: 500px;
-  float: left;
 }
 
 .cards > ul {
   list-style: none;
   margin: 0;
-  padding: 10px;
+  padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 16px;
-  
+  gap: 2rem;
+  grid-template-columns: repeat(1,minmax(0,1fr));
 }
 
 .cards > ul > li {
-  border: 1px solid #d1d5db;
+  border: 1px solid #000;
   background-color: var(--background-color);
-  border-radius: 30px;
+  border-radius: 10px;
+  padding: 1rem;
 }
+
+.cards h2{  
+  font-weight: bold;
+  color: #080808;
+  font-size: 1rem;
+}
+
+.cards > ul > li p {
+  font-size: 1rem;
+}
+
+@media (min-width: 900px) {
+  .cards > ul {
+    grid-template-columns: repeat(3,minmax(0,1fr));
+  }
+}
+/*
+.cards-wrapper{
+  width: 500px;
+  float: left;
+}
+
+
+
+
 
 .cards .cards-card-body {
   margin: 16px;
@@ -49,22 +66,4 @@ main .section.cards-container {
   object-fit: cover;
   border-radius: 30px;
 }
-
-.cards h1{  
-    font-weight: bold;
-    color: #080808;
-    font-size: 1rem;
-    font-family: "Helvetica Neue", Arial, sans-serif;
-    font-style: normal;
-}
-
-.cards > ul > li p {
-  justify-content: flex-start;
-  flex-basis: 75%;
-  color: #080808;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  font-style: normal;
-  overflow: auto;
-}
+*/
