--- a/blocks/winners-carousel/winners-carousel.css
+++ b/blocks/winners-carousel/winners-carousel.css
@@ -4,12 +4,6 @@ main .winners-carousel-container .winners-carousel-wrapper {
   color: #000;
 }
 
-@media (min-width: 992px) {
-  main .winners-carousel-container .winners-carousel-wrapper {
-    padding: 0;
-  }
-}
-
 main .winners-carousel {
   width: 50%;
   display: flex;
@@ -23,7 +17,6 @@ main .winners-carousel::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
 
-/* slide */
 main .winners-carousel > div,
 main .winners-carousel .carousel-slide-card {
   flex-shrink: 0;
@@ -32,44 +25,29 @@ main .winners-carousel .carousel-slide-card {
 }
 
 main .winners-carousel .carousel-slide-card {
+  display: grid;
+  grid-template-columns: 1fr;
   border: 1px solid var(--border-color);
-  border-radius: 9999px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-main .winners-carousel > div > div > *:not(picture),
-main .winners-carousel .carousel-slide > div > *:not(picture) {
-  padding: 0 32px;
-}
-
-main .winners-carousel > div h2,
-main .winners-carousel > div h3 {
-  font-size: var(--heading-font-size-s);
-}
-
-main .winners-carousel > div h2 a,
-main .winners-carousel > div h3 a {
-  color: var(--text-color);
-}
-
-/* carousel img */
-main .winners-carousel .carousel-slide div > a:first-child {
-  margin: 0;
-  padding: 0;
-}
-
-main .carousel-slide-card picture {
-  object-fit: cover;
-  z-index: -1;
-}
-
-main .carousel-slide-card img {
+  background-color: white;
   width: 100%;
-  height: 100%;
+  border-radius: 9999px;
+  grid-template-areas: "overlay";
+  overflow: hidden;
+}
+
+main .winners-carousel .carousel-slide-card .carousel-slide-card-image {
+  grid-area: overlay;
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  border-radius: 9999px;
+}
+
+main .winners-carousel .carousel-slide-card .carousel-slide-card-image picture,
+main .winners-carousel .carousel-slide-card .carousel-slide-card-image img {
   object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
 /* carousel nav */
@@ -97,12 +75,39 @@ main .winners-carousel .carousel-nav.carousel-nav-right {
   right: 52%;
 }
 
-main .winners-carousel .carousel-nav img {
-  width: 16px;
-  height: 16px;
-}
-
 main .winners-carousel .carousel-nav.carousel-nav-disabled {
   cursor: default;
   opacity: .33;
+}
+
+main .winners-carousel .carousel-slide-card .carousel-slide-card-content {
+  gap: 1rem;
+  grid-area: overlay;
+  align-self: flex-end;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  padding: 5%;
+}
+
+main .winners-carousel .carousel-slide-card .carousel-slide-card-content > div:first-child {
+  background-color: var(--highlight-background-color);
+  border-radius: 9999px;
+  display: inline-flex;
+  padding: .25rem .75rem;
+  font-size: .75rem;
+  line-height: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+main .winners-carousel .carousel-slide-card .carousel-slide-card-content > div:nth-child(2) {
+  font-weight: 600;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
