--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,17 +29,17 @@
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 18px;
-  --body-font-size-xs: 14px;
+  --body-font-size-m: 1.2rem;
+  --body-font-size-s: 1rem;
+  --body-font-size-xs: .875rem;
 
   /* heading sizes */
-  --heading-font-size-xxl: 48px;
-  --heading-font-size-xl: 40px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+  --heading-font-size-xxl: 2.2rem;
+  --heading-font-size-xl: 2rem;
+  --heading-font-size-l: 1.75rem;
+  --heading-font-size-m: 1.25rem;
+  --heading-font-size-s: 1.125rem;
+  --heading-font-size-xs: 1rem;
 
   /* nav height */
   --nav-height: 41px;
