added box shadows to latest info columns

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,6 +294,7 @@ main .section.highlight {
   padding: 20px 40px 40px;
   margin: 10px;
   flex-grow: 1;
+  box-shadow: rgb(0 0 0 / 0%) 0 0 0 0, rgb(0 0 0 / 0%) 0 0 0 0, rgb(0 0 0 / 10%) 0 0 50px -5px, rgb(0 0 0 / 4%) 0 10px 10px -5px;
 }
 
 .latest-info .columns h2 {
