--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -106,5 +106,5 @@ main .form {
   
   main .form .form-submit-wrapper {
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
   }
