--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,6 @@
  * governing permissions and limitations under the License.
  */
 
- @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-
  :root {
   /* colors */
   --link-color: rgb(10 17 37);
@@ -24,8 +22,8 @@
   --text-color-invert: #fff;
 
   /* fonts */
-  --body-font-family: 'Roboto','helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
-  --heading-font-family: 'Poppins', 'Roboto','helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+  --body-font-family: 'Roboto','Roboto-fallback', sans-serif;
+  --heading-font-family: 'Poppins', 'Poppins-fallback', sans-serif;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
@@ -43,6 +41,20 @@
 
   /* nav height */
   --nav-height: 41px;
+}
+
+@font-face {
+  font-family: "Poppins-fallback";
+  size-adjust: 112.50%;
+  ascent-override: 109%;
+  src: local("Arial");
+}
+
+@font-face {
+  font-family: "Roboto-fallback";
+  size-adjust: 100.06%;
+  ascent-override: 93%;
+  src: local("Arial");
 }
 
 body {
