replaced :has selector with an ugly workaround

--- a/blocks/section-background/section-background.css
+++ b/blocks/section-background/section-background.css
@@ -4,6 +4,9 @@
     
 }
 
+/* 
+:has isn't well supported, once it is, ucomment this and remove the relevent js and css
+
 .section-background-container:has(div.section-background.hero) {
     min-height: 40rem;
 }
@@ -12,8 +15,22 @@
     .section-background-container:has(div.section-background.hero) {
         min-height: 50rem;
     }
+} 
+*/
+
+/* begin :has workaround */
+
+.section-background-container.hero-container {
+    min-height: 40rem;
 }
 
+@media (min-width: 900px) {
+    .section-background-container.hero-container {
+        min-height: 50rem;
+    }
+} 
+
+/* end :has workaround */
 
 .section-background picture {
     position: absolute;
