small style tweak to hot topics columns

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -23,6 +23,12 @@
   padding-inline: 0;
 }
 
+@media (min-width: 600px) {
+  .hot-topics ul {
+    grid-template-columns: repeat(2,minmax(0,1fr));
+  }
+}
+
 @media (min-width: 900px) {
   .hot-topics ul {
     grid-template-columns: repeat(3,minmax(0,1fr));
