--- a/blocks/winners-carousel/winners-carousel.css
+++ b/blocks/winners-carousel/winners-carousel.css
@@ -117,15 +117,15 @@ main .winners-carousel .carousel-slide-card .carousel-slide-card-content {
   align-items: center;
   border-bottom-left-radius: 9999px;
   border-bottom-right-radius: 9999px;
-  padding: 5%;
+  padding: 1em;
 }
 
 main .winners-carousel .carousel-slide-card .carousel-slide-card-content > div:first-child {
   background-color: var(--highlight-background-color);
   border-radius: 9999px;
   display: inline-flex;
-  padding: .25rem .75rem;
-  font-size: .75rem;
+  padding: .25em .75em;
+  font-size: var(--body-font-size-xs);
   line-height: 1rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -133,7 +133,7 @@ main .winners-carousel .carousel-slide-card .carousel-slide-card-content > div:f
 
 main .winners-carousel .carousel-slide-card .carousel-slide-card-content > div:nth-child(2) {
   font-weight: 600;
-  font-size: 1.875rem;
+  font-size: var(--heading-font-size-m);
   line-height: 2.25rem;
 }
 
