prepare for event launch

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,3 +290,8 @@ main .section.highlight {
     width: auto;
   } 
 }
+
+.cta-box {
+  background-color: var(--highlight-background-color);
+  position: relative;
+}
