--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,3 @@
-/* header and nav layout */
-header .header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 0 2rem;
-  position: fixed;
-  z-index: 2;
-  background-color: var(--dark-background-color);
-  width: 100vw;
-  height: var(--nav-height);
-  box-sizing: border-box;
-  font-family: var(--body-font-family);
-}
-
 header .nav-wrapper {
   background-color: var(--dark-background-color);
   width: 100%;
@@ -42,11 +26,7 @@ header nav[aria-expanded="true"] {
     'sections sections' 1fr
     'tools tools' var(--nav-height) / auto 1fr;
   overflow-y: auto;
-  min-height: 100vh;
-}
-
-header .header nav {
-  width: 1280px
+  min-height: 300px;
 }
 
 .icon-home {
