--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -12,13 +12,20 @@
 }
 
 .hero picture {
-  z-index: -1;
-  width: 100%;
+  margin: auto;
 }
 
 .hero img {
-  object-position: 100% 80%;
+  width: 50%;
+  height: auto;
+  margin: auto;
+  display: block;
+}
+
+.hero > div > div {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
