--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,6 +100,11 @@ h4 { font-size: var(--heading-font-size-m) }
 h5 { font-size: var(--heading-font-size-s) }
 h6 { font-size: var(--heading-font-size-xs) }
 
+h2#meet-the-finalists {
+  text-align: center;
+  color: white;
+}
+
 p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
